--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "sass": "^1.73.0"
     },
     "dependencies": {
+        "aos": "^2.3.4",
         "bootstrap": "^5.3.6",
         "lucide": "^0.517.0"
     }
